<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.errebenito</groupId>
	<artifactId>metallumbot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>MetallumBot</name>
	<description>Unofficial Metal Archives Telegram Bot</description>
	<properties>
		<maven.compiler.source>23</maven.compiler.source>
		<maven.compiler.target>23</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.organization>errebenito</sonar.organization>
  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>
	<dependencyManagement>
  		<dependencies>
    		<dependency>
      			<groupId>com.fasterxml.jackson</groupId>
      			<artifactId>jackson-bom</artifactId>
      			<version>2.18.2</version>
      			<scope>import</scope>
      			<type>pom</type>
    		</dependency>   
  		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.telegram</groupId>
			<artifactId>telegrambots</artifactId>
			<version>6.9.7.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.24.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.24.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.24.3</version>
		</dependency>
		<dependency>
    		<groupId>com.github.spotbugs</groupId>
    		<artifactId>spotbugs-annotations</artifactId>
    		<version>4.8.6</version>
    		<scope>provided</scope>
		</dependency>
		<dependency>
    		<groupId>com.fasterxml.jackson.core</groupId>
    		<artifactId>jackson-databind</artifactId>
    		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.11.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.11.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.easymock</groupId>
    		<artifactId>easymock</artifactId>
    		<version>5.5.0</version>
    		<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.easymock</groupId>
    		<artifactId>easymockclassextension</artifactId>
    		<version>3.2</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-surefire-plugin</artifactId>
    			<version>3.5.2</version>
    			<configuration>
    			<includes>
					<include>com.github.errebenito.metallumbot.MetallumBotTest.java</include>
	    			<include>com.github.errebenito.metallumbot.command.CommandRunnerTest.java</include>
    				<include>com.github.errebenito.metallumbot.connector.UrlConnectorTest.java</include>
    				<include>com.github.errebenito.metallumbot.utils.MessageUtilsTest.java</include> 
    			</includes>								
    			</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.github.errebenito.metallumbot.MetallumBot</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
			</plugin>
			<plugin>
    			<groupId>org.jacoco</groupId>
    			<artifactId>jacoco-maven-plugin</artifactId>
    			<version>0.8.12</version>
    			<executions>
  					<execution>
      					<id>prepare-agent</id>
            			<goals>
             				<goal>prepare-agent</goal>
            			</goals>
      				</execution>
      				<execution>
            			<id>report</id>
            			<phase>test</phase>
               			<goals>
               				<goal>report</goal>
               			</goals>
        			</execution>
    			</executions>
			</plugin>
			<plugin>
                    <groupId>org.pitest</groupId>
                    <artifactId>pitest-maven</artifactId>
                    <version>1.17.4</version>
                    <executions>
                        <execution>
                        	<?m2e execute onConfiguration,onIncremental?>
                            <id>pit-report</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>mutationCoverage</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.pitest</groupId>
                            <artifactId>pitest-junit5-plugin</artifactId>
                            <version>1.2.1</version>
                        </dependency>
                    </dependencies>
                    <configuration>
						<skip>true</skip>
                        <targetClasses>
                            <param>com.github.errebenito.metallumbot*</param>
                        </targetClasses>
                        <targetTests>
							<param>com.github.errebenito.metallumbot.MetallumBotTest*</param>
                            <param>com.github.errebenito.metallumbot.command.CommandRunnerTest*</param>
                            <param>com.github.errebenito.metallumbot.connector.UrlConnectorTest*</param>
                            <param>com.github.errebenito.metallumbot.utils.MessageUtilsTest*</param>
                        </targetTests>
                        <outputFormats>
                            <outputFormat>xml</outputFormat>
                            <outputFormat>html</outputFormat>
                        </outputFormats>
                        <timestampedReports>false</timestampedReports>
                        <failWhenNoMutations>false</failWhenNoMutations>
                    </configuration>
                </plugin>
		</plugins>
	</build>
</project>
